--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^6",
-    "skyline/compiler": "dev-master"
+    "skyline/compiler": "dev-master",
+    "skyline/html-form": "dev-master"
   }
 }
