--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
   "name": "skyline/exposed-symbols",
   "license": "BSD-3-Clause",
-  "minimum-stability": "dev",
   "authors": [
     {
       "name": "Thomas Abplanalp",
@@ -18,7 +17,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^6",
-    "skyline/compiler": "dev-master",
-    "skyline/html-form": "dev-master"
+    "skyline/compiler": "^0.8",
+    "skyline/html-form": "^0.8"
   }
 }
